feat(打印): 使用localforage改进打印数据存储
将打印数据存储从localStorage迁移到localforage，提供更好的异步处理和错误管理

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-resizable": "^3.0.8",
     "framer-motion": "^11.0.0",
     "lexical": "^0.17.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "react": "19.2.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/localforage": "^0.0.33",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
