--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "lexical": "^0.17.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-grid-layout": "^1.5.2",
     "react-resizable": "^3.0.5",
     "uuid": "^13.0.0"
@@ -39,7 +39,7 @@
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
